--- a/templates/pages/playlist.html.twig
+++ b/templates/pages/playlist.html.twig
@@ -3,15 +3,17 @@
     <div class="row mt-3">
         <div class="col">
             <h4 class="text-info mt-5">{{ playlist.name }}</h4>
-            <strong>catégories : </strong>
+            <strong>Catégories : </strong>
                 <!-- boucle pour afficher les catégories -->
                 {% set anccategorie = '' %}
                 {% for playlist in playlistcategories %}
                     {{ playlist.name }}&nbsp;
                 {% endfor %}
-            <br /><br />
-            <strong>description :</strong><br />
+            <br/><br/>
+            <strong>Description :</strong><br />
                 {{ playlist.description|nl2br }}
+            <br/><br/>
+            <strong>Formations disponibles: {{ playlist.formations|length}}</strong>
         </div>
         <div class="col">
             <!-- boucle sur l'affichage des formations -->
