--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -13,13 +13,31 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
+
+                        {% if controller_name|default == 'adminBackController' %}
+                        <a class="nav-link" href="{{ path('admin.accueil') }}">Accueil</a>
+                        {% else %}
                         <a class="nav-link" href="{{ path('accueil') }}">Accueil</a>
+                        {% endif %}
+
                     </li>
                     <li class="nav-item">
+
+                        {% if controller_name|default == 'adminBackController' %}
+                        <a class="nav-link" href="{{ path('admin.formations') }}">Formations</a>
+                        {% else %}
                         <a class="nav-link" href="{{ path('formations') }}">Formations</a>
+                        {% endif %}
+
                     </li>
                     <li class="nav-item">
+                        
+                        {% if controller_name|default == 'adminBackController' %}
                         <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
+                        {% else %}
+                        <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
+                        {% endif %}
+
                     </li>                    
                 </ul>
             </div>
