--- a/templates/pages/admin_pages/admin_formation.html.twig
+++ b/templates/pages/admin_pages/admin_formation.html.twig
@@ -1,4 +1,4 @@
-{% extends "basefront.html.twig" %}
+{% extends "adminbase.html.twig" %}
 {% block body %}
     <div class="row mt-3">
         <div class="col">
@@ -15,6 +15,15 @@
                     title="YouTube video player"
                   >
                 </div>
+
+                            <div class="d-flex flex-row justify-content-center mt-2">
+                                <a href="#" class="btn btn-secondary m-1">Enregistrer</a>
+                                <form action="{{ path('admin.formations.suppr', {id: formation.id}) }}" method="post" class="d-inline" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la formation {{ formation.title }} ?')">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete_formation_' ~ formation.id) }}">
+                                    <button type="submit" class="btn btn-danger m-1">Supprimer</button>
+                                </form>
+                            </div>
+
 
             {% endif %}
         </div>
