--- a/templates/pages/admin_pages/admin_formation.html.twig
+++ b/templates/pages/admin_pages/admin_formation.html.twig
@@ -1,7 +1,16 @@
 {% extends "adminbase.html.twig" %}
 {% block body %}
-    <div class="row mt-3">
-        <div class="col">
+
+    <div class="d-flex flex-row justify-content-end mt-2">
+        <a href="#" class="btn btn-secondary m-1">Enregistrer</a>
+        <form action="{{ path('admin.formations.suppr', {id: formation.id}) }}" method="post" class="d-inline" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la formation {{ formation.title }} ?')">
+            <input type="hidden" name="_token" value="{{ csrf_token('delete_formation_' ~ formation.id) }}">
+            <button type="submit" class="btn btn-danger m-1">Supprimer</button>
+        </form>
+    </div>
+    <form class="row mt-3" method="POST" action="modifier_formation">
+        <div class="row">
+            <div class="col">
             <!-- emplacement de la vidéo -->
             {% if formation.videoid %}
                 <div style="width: 560px; height: 315px; float: none; clear: both; margin: 2px auto;">
@@ -15,21 +24,16 @@
                     title="YouTube video player"
                   >
                 </div>
-
-                            <div class="d-flex flex-row justify-content-center mt-2">
-                                <a href="#" class="btn btn-secondary m-1">Enregistrer</a>
-                                <form action="{{ path('admin.formations.suppr', {id: formation.id}) }}" method="post" class="d-inline" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer la formation {{ formation.title }} ?')">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('delete_formation_' ~ formation.id) }}">
-                                    <button type="submit" class="btn btn-danger m-1">Supprimer</button>
-                                </form>
-                            </div>
-
-
             {% endif %}
+            <div class="mt-2">
+                <label for="videoIdInput" class="form-label"><strong>URL ou ID de la vidéo YouTube :</strong></label>
+                <input type="text" class="form-control" id="videoIdInput" name="formation_videoid" value="{{ formation.videoid }}" placeholder="Exemple : dQw4w9WgXcQ">
+            </div>
         </div>
         <div class="col">
             {{ formation.publishedatstring }}
-            <h4 class="text-info mt-5">{{ formation.title }}</h4>
+            <!-- <h4 class="text-info mt-5">{{ formation.title }}</h4> -->
+            <input type="text" class="form-control text-info mt-5 mb-3" id="titleInput" name="formation_title" value="{{ formation.title }}" style="font-size: 1.5rem;">
             <strong>playlist : </strong>{{ formation.playlist.name }}<br />
             <strong>catégories : </strong>
                 {% for categorie in formation.categories %}
@@ -37,7 +41,33 @@
                 {% endfor %}
             <br /><br />
             <strong>description :</strong><br />
-                {{ formation.description|nl2br }}
+            <textarea name="formation_description" class="form-control" rows="9">
+{{ formation.description }}
+            </textarea>
         </div>
     </div>
+    </form>
 {% endblock %}
+{% block javascripts %}
+    <script defer>
+        
+        window.onload = function(){
+
+
+            let videoInput = document.getElementById('videoIdInput');
+            let embedVideo = document.querySelector('embed');
+
+            videoInput.addEventListener('input', function() {
+                let videoId = videoInput.value;
+                if (videoId.includes('youtube.com') || videoId.includes('youtu.be')) {
+                    const urlParams = new URLSearchParams(videoId.split('?')[1] || '');
+                    videoId = urlParams.get('v') || videoId.split('/').pop();
+                }
+                if (videoId && embedVideo) {
+                    embedVideo.src = `https://www.youtube.com/embed/${videoId}`;
+                }
+            });
+        }
+    </script>
+{% endblock %}
+
