--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -19,6 +19,9 @@
 	         <li class="nav-item">
 	             <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
 	         </li>    
+	         <li class="nav-item">
+	             <a class="nav-link" href="{{ path('admin.categories') }}">Categories</a>
+	         </li>
              <li class="nav-item ms-auto">
                 <button class="btn btn-primary">
                     Se connecter
