Mission 2 - finitions sur les formulaires
J'ai copié le service utilisé pour les (pour l'instant il ne fonctionne pas exactement, c'est juste du debug et pour finaliser la logique de l'app)

--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -31,23 +31,21 @@
 	 </div>
 	</nav>        
 </div>
-<div class="container m-auto">
-
-  {% for label, flashes in app.session.flashbag.all %}
-      {% for flash in flashes %}
-          {% if ( label == 'success' ) %}
-              <div class="alert alert-success alert-dismissible fade show">
-                  {{ flash }}
-              </div>
-          {% elseif ( label == 'error' ) %}
-              <div class="alert alert-danger alert-dismissible fade show">
-                  {{ flash }}
-              </div>
-          {% endif %}
-      {% endfor %}
-  {% endfor %}
-
-</div>
+    <div class="container m-auto">
+{% for label, flashes in app.flashes %}
+    {% for flash in flashes %}
+        {% if ( label == 'success' or label == 'sucess' ) %}
+            <div class="alert alert-success alert-dismissible fade show">
+                {{ flash }}
+            </div>
+        {% elseif ( label == 'error' or label == 'danger' ) %}
+            <div class="alert alert-danger alert-dismissible fade show">
+                {{ flash }}
+            </div>
+        {% endif %}
+    {% endfor %}
+{% endfor %}
+    </div>
 
 {% endblock %}
 
